--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "untown"
+name = "the-rust-of-us"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,4 +7,3 @@ edition = "2021"
 bevy = "0.14.2"
 bevy_spritesheet_animation = "0.4.2"
 extol_sprite_layer = "0.6.0"
-rand = "0.8.5"
