--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,13 @@ edition = "2021"
 bevy = "0.14.2"
 bevy_spritesheet_animation = "0.4.2"
 extol_sprite_layer = "0.6.0"
+
+[profile.dev]
+opt-level = 1
+
+[profile.release]
+lto = true
+opt-level = 3
+codegen-units = 1
+incremental = false
+debug = false
