--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 bevy = "0.14.2"
 bevy_spritesheet_animation = "0.4.2"
 extol_sprite_layer = "0.6.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [profile.dev]
 opt-level = 1
