--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ extol_sprite_layer = "0.6.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 bevy_stat_bars = { git = "https://github.com/adrien-bon/bevy_stat_bars"}
+csv = "1.3.0"
+anyhow = "1.0.87"
 
 [profile.dev]
 opt-level = 1
