--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde_json = "1.0"
 bevy_stat_bars = { git = "https://github.com/adrien-bon/bevy_stat_bars"}
 csv = "1.3.0"
 anyhow = "1.0.87"
+serde_yaml = "0.9.34"
 
 [profile.dev]
 opt-level = 1
