--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ bevy_stat_bars = { git = "https://github.com/adrien-bon/bevy_stat_bars"}
 csv = "1.3.0"
 anyhow = "1.0.87"
 serde_yaml = "0.9.34"
+pathfinding = "4.11.0"
+lazy_static = "1.5.0"
 
 [profile.dev]
 opt-level = 1
