wip: before replace with tween

--- a/assets/timeline.yml
+++ b/assets/timeline.yml
@@ -1,53 +1,4 @@
-- sec: 1
-  id: man_0
-  act: idle
-  at: f2
-  look: left
-
-- sec: 1
-  id: skeleton_0
-  act: idle
-  at: d5
-  look: right
-
-- sec: 2
-  id: man_0
+- id: man_0
   act: walk
   at: f2
-  to: e5
-
-- sec: 4
-  id: man_0
-  act: attack
-  at: e5
-  to: d5
-
-- sec: 4.5
-  id: skeleton_0
-  act: hurt
-  at: d5
-  look: right
-
-- sec: 7
-  id: skeleton_0
-  act: die
-  at: d5
-  look: right
-
-- sec: 7.5
-  id: man_0
-  act: walk
-  at: d5
   to: c5
-
-- sec: 8
-  id: man_0
-  act: open
-  at: c5
-  look: left
-
-- sec: 9
-  id: man_0
-  act: idle
-  at: c5
-  look: right
