--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ anyhow = "1.0.87"
 serde_yaml = "0.9.34"
 pathfinding = "4.11.0"
 lazy_static = "1.5.0"
+strum = { version = "0.26.2", features = ["derive"] }
+strum_macros = "0.26.4"
 
 [profile.dev]
 opt-level = 1
