--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ pathfinding = "4.11.0"
 lazy_static = "1.5.0"
 strum = { version = "0.26.2", features = ["derive"] }
 strum_macros = "0.26.4"
+big-brain = "0.21.1"
 
 [profile.dev]
 opt-level = 1
