--- a/assets/stage_1-1.yml
+++ b/assets/stage_1-1.yml
@@ -1,9 +1,9 @@
 id: 1-1
 name: "hello world!"
-players:
+humans:
   - type: man
     character_id: man_0
-    position: f2
+    position: e5
     look_direction: left
     act: idle
     attack: 2
