--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
-name = "the-rust-of-us"
+name = "the_rust_of_us"
 version = "0.1.0"
 edition = "2021"
+
+[lib]
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 bevy = "0.14.2"
@@ -19,6 +22,7 @@ strum = { version = "0.26.2", features = ["derive"] }
 strum_macros = "0.26.4"
 big-brain = { version = "0.21.1", features = ["trace"] }
 rand = "0.8.5"
+wasm-bindgen = "0.2.93"
 
 [profile.dev]
 opt-level = 1
