--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,7 @@
 [package]
-name = "the_rust_of_us"
+name = "the-rust-of-us"
 version = "0.1.0"
 edition = "2021"
-
-[lib]
-crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 bevy = "0.14.2"
@@ -22,7 +19,17 @@ strum = { version = "0.26.2", features = ["derive"] }
 strum_macros = "0.26.4"
 big-brain = { version = "0.21.1", features = ["trace"] }
 rand = "0.8.5"
+# Wasm
 wasm-bindgen = "0.2.93"
+console_error_panic_hook = "0.1"
+web-sys = { version = "0.3", features = [
+    "console",
+    "Document",
+    "HtmlElement",
+    "Node",
+    "Text",
+    "Window",
+] }
 
 [profile.dev]
 opt-level = 1
