--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,11 @@ web-sys = { version = "0.3", features = [
     "Node",
     "Text",
     "Window",
+    "Storage",
 ] }
+serde-wasm-bindgen = "0.6.5"
+wasm-bindgen-futures = "0.4.43"
+bevy_pkv = "0.11.1"
 
 [profile.dev]
 opt-level = 1
